@startuml
class SQLiteUserRepository

interface IUserRepository

class UserModel

class SqLiteClient

interface IUserService

class UserService

class UserController

class pydantic.BaseModel

package schemas {

}

IUserRepository <|-- SQLiteUserRepository : implementa
SQLiteUserRepository "1" *-- "1" SqLiteClient
SQLiteUserRepository "1" *-- "many" UserModel
IUserService <|-- UserService: implementa
UserService  --> IUserRepository : depende
UserService "1" *-- "1" SQLiteUserRepository
UserController --> IUserService : depende
UserController --> schemas : depende
UserController "1" *-- "1" UserService
pydantic.BaseModel <|-- schemas.UserCreateRequest
pydantic.BaseModel <|-- schemas.UserUpdateRequest
pydantic.BaseModel <|-- schemas.UserGeneralResponse
pydantic.BaseModel <|-- schemas.GenericOkResponse
pydantic.BaseModel <|-- schemas.GenericErrorResponse

@enduml
